added Fencesitters to website portfolio

--- a/index.html
+++ b/index.html
@@ -244,6 +244,34 @@
               <div class="col-md-4">
                 <img
                   class="img-fluid project-img"
+                  src="img/fencesitters.png"
+                  alt="Screenshot of the Fencesitters homepage"
+                />
+              </div>
+              <div class="col-md-8">
+                <h4>Fencesitters</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-js">JavaScript</span>
+                  <span class="badge badge-php">PHP</span>
+                </div>
+                  <a
+                    href="https://subbasementstudios.com/fencesitters/"
+                    target="_blank"
+                    >View</a
+                  >
+                  <p>
+                    Custom website with animations for an independent film project.
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-12 project-col">
+              <div class="bg-dark row">
+              <div class="col-md-4">
+                <img
+                  class="img-fluid project-img"
                   src="img/max-type5.jpg"
                   alt="Trimet"
                 />
