--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
                   <i class="fa fa-briefcase"></i>
                 </a>
+                <a class="social-icon" href="https://github.com/georgeolson92" target="_blank" aria-label="Github">
+                  <i class="fa fa-github"></i>
+                </a>
               </h3>
             </div>
             <div class="col-sm-4">
@@ -156,6 +159,9 @@
                 </a>
                 <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
                   <i class="fa fa-briefcase"></i>
+                </a>
+                <a class="social-icon" href="https://github.com/georgeolson92" target="_blank" aria-label="Github">
+                  <i class="fa fa-github"></i>
                 </a>
               </p>
             </div>
