Adjusted main paragaph on home view

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="col-sm-7">
               <p class="larger">
-                I'm a developer with expertise in full-stack web & software development.
+                I'm a full-stack web & software developer.
               </p>
               <p> I hold a master’s degree in Computer Science, where I focused on software engineering, advanced algorithms, and emerging tech like AI and VR. I've worked with international software companies and local startups, developing innovative solutions and managing websites for on-campus organizations. Check out my portfolio below to see my work!.</p>
               <p>  Let's connect and explore potential opportunities! If you're interested in collaborating or just want to chat, feel free to reach out—I'd love to hear from you!</p>
