--- a/index.html
+++ b/index.html
@@ -124,19 +124,6 @@
         <a name="about"></a>
         <div class="container">
           <div class="row project-section">
-            <div class="col-12">
-              <h3>Hi, I'm George. 
-                <a class="social-icon" href="https://www.linkedin.com/in/gjolson/" target="_blank" aria-label="Linkedin">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-                <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
-                  <i class="fa fa-briefcase"></i>
-                </a>
-                <a class="social-icon" href="https://github.com/georgeolson92" target="_blank" aria-label="Github">
-                  <i class="fa fa-github"></i>
-                </a>
-              </h3>
-            </div>
             <div class="col-md-3 col-sm-4">
               <img
                 class="bio-image img-fluid"
@@ -148,9 +135,19 @@
               <p class="larger">
                 I'm a full-stack web & software developer.
               </p>
-              <p> I hold a master’s degree in Computer Science, where I focused on software engineering, advanced algorithms, and emerging tech like AI and VR. I've worked with international software companies and local startups, developing innovative solutions and managing websites for on-campus organizations. Check out my portfolio below to see my work!.</p>
+              <p> I have a master’s degree in Computer Science, where I focused on software engineering, advanced algorithms, and other tech like language learning models and virtual reality. I've worked with international software companies and local startups, developing innovative solutions and managing websites for on-campus organizations. Check out my portfolio below to see my work!.</p>
               <p>  Let's connect and explore potential opportunities! If you're interested in collaborating or just want to chat, feel free to reach out—I'd love to hear from you!</p>
-              <p><a href="mailto:olsongeorgej@gmail.com">Email me!</a></p>
+              <p><a href="mailto:olsongeorgej@gmail.com">Email me!</a> Or reach out elsewhere: 
+              <a class="social-icon" href="https://www.linkedin.com/in/gjolson/" target="_blank" aria-label="Linkedin">
+                <i class="fa fa-linkedin"></i>
+              </a>
+              <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
+                <i class="fa fa-briefcase"></i>
+              </a>
+              <a class="social-icon" href="https://github.com/georgeolson92" target="_blank" aria-label="Github">
+                <i class="fa fa-github"></i>
+              </a>
+              </p>
             </div>
           </div>
         </div>
