Updated images and included URL for chatbot

--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
                     >View</a
                   >
                   <p>
-                    A complete redesign of KPSU radio station's website, using a theme from a previous developer that has been fully customized to fit their needs, using custom post types and custom-built templates for show pages & show notes. 
+                    A complete redesign of KPSU radio station's website, using a theme from a previous developer that has been fully customized to fit their needs, using custom post types and custom-built templates for show pages & show notes. Includes a custom radio player using RadioCo’s DIY Radio
+                    builder kit as a starting point and created a WordPress template
+                    that implements RadioCo streaming functionality with a clean
+                    layout that matches the site’s new identity. 
                   </p>
               </div>
             </div>
@@ -223,6 +226,72 @@
               <div class="col-md-12">
                 <img
                   class="img-fluid project-img"
+                  src="img/colornamer.png"
+                  alt="Screenshot of ColorFinder homepage"
+                />
+              </div>
+              <div class="col-md-12">
+                <h4>ColorNamer</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-js">React</span>
+                </div>
+                  <a
+                    href="https://colornamer.vercel.app/"
+                    target="_blank"
+                    >View</a
+                  >
+                  |
+                  <a
+                    href="https://github.com/georgeolson92/colornamer"
+                    target="_blank"
+                    >View on Github</a
+                  >
+                  <p>
+                    A new open-source React project that provides a color picker tool for extracting HEX codes and color names from images. This project was inspired by my desire for a tool that helps me distinguish certain colors more easily due to my colorblindness.
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-lg-4 col-md-6 project-col">
+              <div class="row">
+                <div class="col-md-12">
+                  <img
+                    class="img-fluid project-img"
+                    src="img/gramophone.png"
+                    alt="Image of the logo used for Rare Releases"
+                  />
+                </div>
+              <div class="col-md-12">
+                <h4>Rare Releases</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-python">Python</span>
+                </div>
+                  <a
+                    href="https://final-217489618005.us-west2.run.app/"
+                    target="_blank"
+                    >View</a
+                  >
+                  |
+                  <a
+                    href="https://github.com/georgeolson92/rarereleases"
+                    target="_blank"
+                    >View on Github</a
+                  >
+                  <p>
+                    A web application built in python that connects to your Spotify account and finds rare musical releases from your top three artists, using Discogs. 
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-lg-4 col-md-6 project-col">
+              <div class="row">
+              <div class="col-md-12">
+                <img
+                  class="img-fluid project-img"
                   src="img/fencesitters.png"
                   alt="Screenshot of the Fencesitters homepage"
                 />
@@ -251,68 +320,6 @@
               <div class="col-md-12">
                 <img
                   class="img-fluid project-img"
-                  src="img/colornamer.png"
-                  alt="Screenshot of ColorFinder homepage"
-                />
-              </div>
-              <div class="col-md-12">
-                <h4>ColorFinder</h4>
-                <div class="badges">
-                  <span class="badge badge-html">HTML</span>
-                  <span class="badge badge-css">CSS</span>
-                  <span class="badge badge-js">React</span>
-                </div>
-                  <a
-                    href="https://github.com/georgeolson92/colornamer"
-                    target="_blank"
-                    >View on Github</a
-                  >
-                  <p>
-                    I'm starting a new open-source React project that provides a color picker tool for extracting HEX codes and color names from images. This project was inspired by my desire for a tool that helps me distinguish certain colors more easily due to my colorblindness.
-                  </p>
-              </div>
-            </div>
-            </div>
-            <div class="col-lg-4 col-md-6 project-col">
-              <div class="row">
-              <div class="col-md-12">
-                <img
-                  class="img-fluid project-img"
-                  src="img/kpsu-player.png"
-                  alt="Screenshot of the KPSU radio player using RadioCo"
-                />
-              </div>
-              <div class="col-md-12">
-                <h4>KPSU RadioCo Player</h4>
-                <div class="badges">
-                  <span class="badge badge-html">HTML</span>
-                  <span class="badge badge-css">CSS</span>
-                  <span class="badge badge-js">JavaScript</span>
-                  <span class="badge badge-php">PHP</span>
-                  <span class="badge badge-wp">WordPress</span>
-                </div>
-                  <a
-                    href="https://kpsu.org/player/"
-                    target="_blank"
-                    >View</a
-                  >
-                  <p>
-                    A custom radio player for the new website redesign for Portland
-                    State University’s radio station. I used RadioCo’s DIY Radio
-                    builder kit as a starting point and created a WordPress template
-                    that implements RadioCo streaming functionality with a clean
-                    layout that matches the site’s new identity. The player opens in
-                    a separate browser window so music can play in the background
-                    without relying on an AJAX Wordpress template.
-                  </p>
-              </div>
-            </div>
-            </div>
-            <div class="col-lg-4 col-md-6 project-col">
-              <div class="row">
-              <div class="col-md-12">
-                <img
-                  class="img-fluid project-img"
                   src="img/max-type5.jpg"
                   alt="Trimet"
                 />
@@ -325,39 +332,17 @@
                   <span class="badge badge-js">JavaScript</span>
                 </div>
                   <a
+                    href="/chat.html"
+                    >View on GitHub</a
+                  >
+                  |
+                  <a
                     href="https://github.com/georgeolson92/maxine-trimettracker"
                     target="_blank"
                     >View on GitHub</a
                   >
                   <p>
                     'Maxine' is a virtual transit assistant that helps the user plan a trip on Portland's MAX and streetcar metro systems. The purpose of the application is to provide users with detailed routes including stops, transfers, and estimated travel times. 
-                  </p>
-              </div>
-            </div>
-            </div>
-            <div class="col-lg-4 col-md-6 project-col">
-              <div class="row">
-                <div class="col-md-12">
-                  <img
-                    class="img-fluid project-img"
-                    src="img/gramophone.png"
-                    alt="Image of the logo used for Rare Releases"
-                  />
-                </div>
-              <div class="col-md-12">
-                <h4>Rare Releases</h4>
-                <div class="badges">
-                  <span class="badge badge-html">HTML</span>
-                  <span class="badge badge-css">CSS</span>
-                  <span class="badge badge-python">Python</span>
-                </div>
-                  <a
-                    href="https://github.com/georgeolson92/rarereleases"
-                    target="_blank"
-                    >View on Github</a
-                  >
-                  <p>
-                    A web application built in python that connects to your Spotify account and finds rare musical releases from your top three artists, using Discogs. 
                   </p>
               </div>
             </div>
