Another update due to link not including personal site directory

--- a/index.html
+++ b/index.html
@@ -332,8 +332,9 @@
                   <span class="badge badge-js">JavaScript</span>
                 </div>
                   <a
-                    href="/chat.html"
-                    >View on GitHub</a
+                    href="/personalsite/chat"
+                    target="_blank"
+                    >View</a
                   >
                   |
                   <a
