Updates to main paragraph at top and order of projects

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <p class="larger">
                 I'm a full-stack web & software developer.
               </p>
-              <p> I have a master’s degree in Computer Science, where I focused on software engineering, advanced algorithms, and other tech like language learning models and virtual reality. I've worked with international software companies and local startups, developing innovative solutions and managing websites for on-campus organizations. Check out my portfolio below to see my work!.</p>
+              <p> I have a master’s degree in Computer Science, where I focused on software engineering, advanced algorithms, and other tech like language learning models and virtual reality. I've worked with international software companies and local startups, developing innovative solutions and managing websites for various organizations. Check out my portfolio below to see my work!.</p>
               <p>  Let's connect and explore potential opportunities! If you're interested in collaborating or just want to chat, feel free to reach out—I'd love to hear from you!</p>
               <p><a href="mailto:olsongeorgej@gmail.com">Email me!</a> Or reach out elsewhere: 
               <a class="social-icon" href="https://www.linkedin.com/in/gjolson/" target="_blank" aria-label="Linkedin">
@@ -220,6 +220,39 @@
                     </p>
                 </div>
               </div>
+            </div>
+            <div class="col-lg-4 col-md-6 project-col">
+              <div class="row">
+              <div class="col-md-12">
+                <img
+                  class="img-fluid project-img"
+                  src="img/max-type5.jpg"
+                  alt="Trimet"
+                />
+              </div>
+              <div class="col-md-12">
+                <h4>Maxine, Virtual Trimet Assistant</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-js">JavaScript</span>
+                </div>
+                  <a
+                    href="/personalsite/chat"
+                    target="_blank"
+                    >View</a
+                  >
+                  |
+                  <a
+                    href="https://github.com/georgeolson92/maxine-trimettracker"
+                    target="_blank"
+                    >View on GitHub</a
+                  >
+                  <p>
+                    'Maxine' is a virtual transit assistant that helps the user plan a trip on Portland's MAX and streetcar metro systems. The purpose of the application is to provide users with detailed routes including stops, transfers, and estimated travel times. 
+                  </p>
+              </div>
+            </div>
             </div>
             <div class="col-lg-4 col-md-6 project-col">
               <div class="row">
@@ -311,39 +344,6 @@
                   >
                   <p>
                     Custom website with animations for an independent film project.
-                  </p>
-              </div>
-            </div>
-            </div>
-            <div class="col-lg-4 col-md-6 project-col">
-              <div class="row">
-              <div class="col-md-12">
-                <img
-                  class="img-fluid project-img"
-                  src="img/max-type5.jpg"
-                  alt="Trimet"
-                />
-              </div>
-              <div class="col-md-12">
-                <h4>Maxine, Virtual Trimet Assistant</h4>
-                <div class="badges">
-                  <span class="badge badge-html">HTML</span>
-                  <span class="badge badge-css">CSS</span>
-                  <span class="badge badge-js">JavaScript</span>
-                </div>
-                  <a
-                    href="/personalsite/chat"
-                    target="_blank"
-                    >View</a
-                  >
-                  |
-                  <a
-                    href="https://github.com/georgeolson92/maxine-trimettracker"
-                    target="_blank"
-                    >View on GitHub</a
-                  >
-                  <p>
-                    'Maxine' is a virtual transit assistant that helps the user plan a trip on Portland's MAX and streetcar metro systems. The purpose of the application is to provide users with detailed routes including stops, transfers, and estimated travel times. 
                   </p>
               </div>
             </div>
